[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
combinations = { version = "0.1.0", path = "../combinations" }
conway = { version = "0.1.0", path = "../conway" }
min-queue = { version = "0.1.0", path = "../min-queue" }
comm = { version = "0.1.0", path = "../comm" }
lru-cache = { version = "0.1.0", path = "../lru-cache" }

[[example]]
name = "combinations"
path = "combinations.rs"

[[example]]
name = "conway"
path = "conway.rs"

[[example]]
name = "min-queue"
path = "min-queue.rs"

[[example]]
name = "comm"
path = "comm.rs"

[[example]]
name = "lru-cache"
path = "lru-cache.rs"
