[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
combinations = { version = "0.1.0", path = "../combinations" }
conway = { version = "0.1.0", path = "../conway" }
min-queue = { version = "0.1.0", path = "../min-queue" }
comm = { version = "0.1.0", path = "../comm" }
lru-cache = { version = "0.1.0", path = "../lru-cache" }
prefix = { version = "0.1.0", path = "../prefix" }
trust = { version = "0.1.0", path = "../trust" }
mpsc = { version = "0.1.0", path = "../mpsc" }
flatmap = { version = "0.1.0", path = "../flatmap" }
itertools = {version = "0.2.0", path = "../itertools"}

[[example]]
name = "combinations"
path = "combinations.rs"

[[example]]
name = "conway"
path = "conway.rs"

[[example]]
name = "min-queue"
path = "min-queue.rs"

[[example]]
name = "comm"
path = "comm.rs"

[[example]]
name = "lru-cache"
path = "lru-cache.rs"

[[example]]
name = "prefix"
path = "prefix.rs"

[[example]]
name = "trust"
path = "trust.rs"

[[example]]
name = "mpsc"
path = "mpsc.rs"

[[example]]
name = "flatmap"
path = "flatmap.rs"

[[example]]
name = "itertools"
path = "itertools.rs"
